--- a/index.html
+++ b/index.html
@@ -23,5 +23,21 @@
             <p><span>03</span>TECHNOLOGY</p>
         </div>
     </nav>
+    <article class="home__info">
+        <h3>
+            SO, YOU WANT TO TRAVEL TO
+        </h3>
+        <h1>
+            SPACE
+        </h1>
+        <p>
+            Let’s face it; if you want to go to space, you might as well genuinely go to 
+            outer space and not hover kind of on the edge of it. Well sit back, and relax 
+            because we’ll give you a truly out of this world experience!
+        </p>
+    </article>
+    <section class="explore">
+        <p>EXPLORE</p>
+    </section>
 </body>
 </html>
