working in a destination feature

--- a/index.html
+++ b/index.html
@@ -17,27 +17,56 @@
         <img src="./src/images/icons/logo.svg" alt="page logo">
         <hr>
         <div class="menu__options">
-            <p><span>00</span>HOME</p>
-            <p><span>01</span>DESTINATION</p>
-            <p><span>02</span>CREW</p>
-            <p><span>03</span>TECHNOLOGY</p>
+            <p id="home"><span>00</span>HOME</p>
+            <p id="destination"><span>01</span>DESTINATION</p>
+            <p id="crew"><span>02</span>CREW</p>
+            <p id="technology"><span>03</span>TECHNOLOGY</p>
         </div>
     </nav>
-    <article class="home__info">
-        <h3>
-            SO, YOU WANT TO TRAVEL TO
-        </h3>
-        <h1>
-            SPACE
-        </h1>
-        <p>
-            Let’s face it; if you want to go to space, you might as well genuinely go to 
-            outer space and not hover kind of on the edge of it. Well sit back, and relax 
-            because we’ll give you a truly out of this world experience!
-        </p>
-    </article>
-    <section class="explore">
-        <p>EXPLORE</p>
+    <section class="main_section">
+        <!-- <article class="home__info">
+            <h3>
+                SO, YOU WANT TO TRAVEL TO
+            </h3>
+            <h1>
+                SPACE
+            </h1>
+            <p>
+                Let’s face it; if you want to go to space, you might as well genuinely go to 
+                outer space and not hover kind of on the edge of it. Well sit back, and relax 
+                because we’ll give you a truly out of this world experience!
+            </p>
+        </article>
+        <section class="explore">
+            <p>EXPLORE</p>
+        </section> -->
+        <h3 class="destination__title"><span>01</span>PICK YOUR DESTINATION</h3>
+        <img src="./src/images/destination/image-moon.png" alt="destination" class="destination__image">
+        <section class="destination__info">
+           <ul>
+            <li>MOON</li>
+            <li>MARS</li>
+            <li>EUROPA</li>
+            <li>TITAN</li>
+           </ul>
+           <h1>MOON</h1>
+           <p>
+            See our planet as you’ve never seen it before. A perfect relaxing trip away to help 
+            regain perspective and come back refreshed. While you’re there, take in some history 
+            by visiting the Luna 2 and Apollo 11 landing sites.
+           </p>
+           <hr>
+           <article class="destination__details">
+               <div class="distance">
+                   <h4>AVG. DISTANCE</h4>
+                   <p>384,400 KM</p>
+               </div>
+               <div class="travel__time">
+                   <h4>EST. TRAVEL TIME</h4>
+                   <p>3 DAYS</p>
+               </div>
+           </article> 
+        </section>       
     </section>
 </body>
 </html>
