destinatination html template finished

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
            <article class="destination__details">
                <div class="distance">
                    <h4>AVG. DISTANCE</h4>
-                   <p>384,400 KM</p>
+                   <span>384,400 KM</span>
                </div>
                <div class="travel__time">
                    <h4>EST. TRAVEL TIME</h4>
-                   <p>3 DAYS</p>
+                   <span>3 DAYS</span>
                </div>
            </article> 
         </section>       
