--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./src/images/icons/icon_page.png">
 
     <link rel="stylesheet" href="style.css" />
-    <script type="module" defer src="src/js/model.js"></script>
+    <script type="module" defer src="src/js/controller.js"></script>
 
     <title>Space Tourism</title>
 </head>
