rendering when click on destinations

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <img src="./src/images/icons/logo.svg" alt="page logo">
         <hr>
         <div class="menu__options">
-            <p id="home"><span>00</span>HOME</p>
-            <p id="destination"><span>01</span>DESTINATION</p>
-            <p id="crew"><span>02</span>CREW</p>
-            <p id="technology"><span>03</span>TECHNOLOGY</p>
+            <p class="home"><span>00</span>HOME</p>
+            <p class="destination"><span>01</span>DESTINATION</p>
+            <p class="crew"><span>02</span>CREW</p>
+            <p class="technology"><span>03</span>TECHNOLOGY</p>
         </div>
     </nav>
     <section class="main_section">
@@ -36,10 +36,10 @@
                 outer space and not hover kind of on the edge of it. Well sit back, and relax 
                 because we’ll give you a truly out of this world experience!
             </p>
+            <section class="explore">
+                <p>EXPLORE</p>
+            </section>   
         </article>
-        <section class="explore">
-            <p>EXPLORE</p>
-        </section>   
     </section>
 </body>
 </html>
