working on the crew feature

--- a/index.html
+++ b/index.html
@@ -24,7 +24,28 @@
         </div>
     </nav>
     <section class="main_section">
-        <article class="home__info">
+        <h3 class="destination__title"><span>02</span>MEET YOUR CREW</h3>
+        <div class="slider">
+            <div class="slide slide--1">
+                <div class="biografia">
+                    <h4 class="role">COMMANDER</h4>
+                    <h2 class="name">DOUGLAS HURLEY</h2>
+                    <blockquote class="biografia__text">
+                        Douglas Gerald Hurley is an American engineer, former Marine Corps pilot and former 
+                        NASA astronaut. He launched into space for the third time as commander of Crew Dragon 
+                        Demo-2.
+                    </blockquote>
+                </div>
+                <img src="./src/images/crew/image-douglas-hurley.png" class="crew__photo" alt="crew__photo">
+                <div class="dots">
+                    <button class="dots__dot"></button>
+                    <button class="dots__dot"></button>
+                    <button class="dots__dot"></button>
+                    <button class="dots__dot"></button>
+                </div>
+            </div>
+        </div>
+        <!-- <article class="home__info">
             <h3>
                 SO, YOU WANT TO TRAVEL TO
             </h3>
@@ -39,7 +60,7 @@
             <section class="explore">
                 <p>EXPLORE</p>
             </section>   
-        </article>
+        </article> -->
     </section>
 </body>
 </html>
