--- a/index.html
+++ b/index.html
@@ -24,7 +24,28 @@
         </div>
     </nav>
     <section class="main_section">
-        <article class="home__info">
+        <h3 class="destination__title"><span>03</span>SPACE LAUNCH 101</h3>
+        <section class="tech__container">
+            <article class="description__container">
+                <div class="tech_dots">
+                    <button class="vehicle">1</button>
+                    <button class="spaceport">2</button>
+                    <button class="capsule">3</button>
+                </div>
+                <div class="description">
+                    <h4>THE TERMINOLOGY...</h4>
+                    <h2>LAUNCH VEHICLE</h2>
+                    <blockquote>
+                        A launch vehicle or carrier rocket is a rocket-propelled vehicle used to carry a payload 
+                        from Earth's surface to space, usually to Earth orbit or beyond. Our WEB-X carrier rocket 
+                        is the most powerful in operation. Standing 150 metres tall, it's quite an awe-inspiring 
+                        sight on the launch pad!
+                    </blockquote>
+                </div>
+            </article>
+            <img src="/src/images/technology/image-launch-vehicle-portrait.jpg" alt="tech__image">
+        </section>
+        <!-- <article class="home__info">
             <h3>
                 SO, YOU WANT TO TRAVEL TO
             </h3>
@@ -39,7 +60,7 @@
             <section class="explore">
                 <p>EXPLORE</p>
             </section>   
-        </article>
+        </article> -->
     </section>
 </body>
 </html>
