finishing home feature

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </nav>
     <section class="main_section">
-        <article class="home__info">
+        <!-- <article class="home__info">
             <h3>
                 SO, YOU WANT TO TRAVEL TO
             </h3>
@@ -38,7 +38,7 @@
             </p>
             <section class="explore">
                 <p>EXPLORE</p>
-            </section>   
+            </section>    -->
         </article>
     </section>
 </body>
