hamburguer btn functional

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 </head>
 <body>
     <nav class="nav__bar">
-        <img src="./src/images/icons/logo.svg" alt="page logo">
+        <img src="./src/images/icons/logo.svg" alt="page logo" class="logo">
         <hr>
-        <div class="menu__options">
+        <img src="./src/images/icons/icon-hamburger.svg" alt="hamburger__menu" class="hamburger_menu">
+        <div class="menu__options" id="menu__options">
+            <img src="./src/images/icons/icon-close.svg" alt="close__icon" class="close__icon hidden">
             <p class="home"><span>00</span>HOME</p>
             <p class="destination"><span>01</span>DESTINATION</p>
             <p class="crew"><span>02</span>CREW</p>
